--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -49,6 +49,12 @@ fr:
         type: Indication de la langue
         table_header: Langue
         empty: Absente
+        totalement: Totalement conforme
+      checks/accessibility_page:
+        type: Page accessibilité
+        table_header: Page
+        link_to: "Page d'accessibilité de %{name}"
+        not_found: Non trouvée
 
       site:
         created_at: Date de création
