feat: Adjust sponsor name displayed in page headers

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,7 +1,7 @@
 fr:
   global:
-    sponsor: "Direction Interministérielle du Numérique"
-    sponsor_html: "Direction<br>Interministérielle<br>du Numérique"
+    sponsor: "Gouvernement"
+    sponsor_html: "Gouvernement"
     service_name: "Accès cible"
     service_description: "Contrôle l'accessibilité et la conformité des sites internet"
 
