Look for audit update date

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -69,6 +69,7 @@ fr:
         missing_data: Déclaration incomplète
         unknown: Non détecté
         audit_date: Date de l'audit
+        audit_update_date: Audit mis à jour le
         compliance_rate: Taux de conformité
         standard: Référentiel
         auditor: Audit réalisé par
