feat: Store blocked status for checks that can't run

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -52,7 +52,7 @@ fr:
         pending: Planifié
         running: En cours
         passed: Effectué
-        retryable: À retenter
+        blocked: Inapplicable
         failed: Échoué
       checks/accessibility_mention:
         type: Mention du niveau d'accessibilité
