--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -100,6 +100,12 @@ fr:
         issues_total: Erreurs relevées
         success_rate: Taux de réussite
         unknown: Inconnu
+        elements: Éléments concernés
+      checks/run_axe_on_homepage/impacts:
+        minor: Mineur
+        moderate: Modéré
+        serious: Important
+        critical: Critique
 
       site:
         created_at: Enregistré le
