Add sort_link helper

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -12,6 +12,9 @@ fr:
     time_until: "dans %{time}"
     back_to_list: "Revenir à la liste"
     new_window: " (nouvelle fenêtre)"
+    sort_by: "Trier par %{column} %{direction}"
+    asc: ascendant
+    desc: descendant
 
   time:
     formats:
