--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -19,6 +19,7 @@ fr:
   time:
     formats:
       compact: "%Y/%m/%d"
+      file: "%Y%m%d-%Hh%M"
   date:
     formats:
       compact: "%Y/%m/%d"
