feat: Allow counting checks that have run

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -67,6 +67,10 @@ fr:
         run_at: Vérification prévue le
         checked_at: Vérification effectuée le
         attempts: Tentatives
+        count:
+          zero: Aucun contrôle
+          one: Un contrôle
+          other: "%{count} contrôles"
       check/status:
         pending: Planifié
         running: En cours
