feat: Add presentation and stats on the homepage

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -157,7 +157,7 @@ fr:
     accessibilite:
       title: Déclaration d’accessibilité
     accueil:
-      title: Accueil
+      title: Présentation
     contact:
       title: Contact
     cookies:
