Allow uploading a csv list of files

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -12,6 +12,8 @@ fr:
     send: Envoyer
     save: Enregistrer
     saving: Enregistrement…
+    upload: Téléverser
+    uploading: Téléversement en cours…
     time_ago: "il y a %{time}"
     time_until: "dans %{time}"
     back_to_list: "Revenir à la liste"
@@ -33,6 +35,16 @@ fr:
     attributes:
       url:
         invalid: invalide
+
+  activemodel:
+    errors:
+      models:
+        site_upload:
+          attributes:
+            file:
+              invalid_size: Le fichier est trop lourd. Merci de le découper en plusieurs fichiers.
+              invalid_format: Le fichier n'est pas reconnu comme un fichier CSV.
+              invalid_headers: Le fichier n'a pas les bons en-têtes de colonne.
 
   viewcomponent:
     dsfr:
@@ -140,11 +152,14 @@ fr:
         updated_at: Date de mise à jour
         url: Adresse du site
         url_hint: Saisissez une url valide, commençant par https:// ou http://
+        file: Fichier CSV
+        file_hint: "Format attendu : fichier CSV avec un colonne intitulée URL. Taille maximale : 5Mo."
         audits: Toutes les vérifications
         audit_history: Historique des vérifications (%{total})
         audits_count: Vérifications
         last_audit_at: Dernière vérification
         detail: Détails
+        import: Importer des sites depuis un fichier
         view: Voir la fiche
         view_name: Voir la fiche de %{name}
         export_to_csv: Télécharger en CSV
@@ -181,6 +196,10 @@ fr:
       title: Ajouter un site
     create:
       notice: Site ajouté
+      uploaded:
+        zero: Aucun site ajouté
+        one: Un site ajouté
+        other: "%{count} sites ajoutés"
     edit:
       title: Modifier le site
     update:
