--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -9,11 +9,12 @@ fr:
     actions: Actions
     confirm: "Êtes-vous sûr ? Cette action ne peut pas être annulée."
     cancel: Annuler
+    add: Ajouter
     send: Envoyer
     save: Enregistrer
     saving: Enregistrement…
-    upload: Téléverser
-    uploading: Téléversement en cours…
+    import: Importer
+    importing: Import en cours…
     time_ago: "il y a %{time}"
     time_until: "dans %{time}"
     back_to_list: "Revenir à la liste"
