refactor: Send site uploads to a dedicated route

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -217,6 +217,8 @@ fr:
       title: Ajouter un site
     create:
       notice: Site ajouté
+    upload:
+      title: Importer des sites
       uploaded:
         zero: Aucun site ajouté
         one: Un site ajouté
