feat: Display a warning instead of crashing when page param is unavailable

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -23,6 +23,7 @@ fr:
     asc: croissant
     desc: décroissant
     or: ou
+    page_unavailable: Cette page n'est pas disponible.
 
   time:
     formats:
