ui: Display an alert when there are no sites to display

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -170,6 +170,7 @@ fr:
         critical: Critique
 
       site:
+        empty_collection: Il n'y a aucun site à afficher. Ajoutez un ou plusieurs sites à évaluer.
         created_at: Enregistré le
         updated_at: Date de mise à jour
         url: Adresse du site
