--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -181,6 +181,8 @@ fr:
         url_hint: Saisissez une url valide, commençant par https:// ou http://
         file: Fichier CSV
         file_hint: "Format attendu : fichier CSV avec une colonne intitulée URL. Taille maximale : 5Mo."
+        name: "Nom du site"
+        name_hint: "Nom utilisé pour l'affichage. S'il est laissé vide, il est récupéré automatiquement lors du prochain audit."
         audits: Toutes les vérifications
         audit_history: Historique des vérifications (%{total})
         audits_count: Vérifications
@@ -191,6 +193,7 @@ fr:
         view_name: Voir la fiche de %{name}
         export_to_csv: Télécharger en CSV
         delete: Supprimer ce site
+        edit: Modifier ce site
         count:
           zero: Aucun site
           one: Un site
