--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -174,6 +174,7 @@ fr:
       session:
         login_failed: Nous n'avons pas réussi à vous identifier.
       site:
+        all: Tous les sites
         empty_collection: Il n'y a aucun site à afficher. Ajoutez un ou plusieurs sites à évaluer.
         created_at: Enregistré le
         updated_at: Date de mise à jour
@@ -194,6 +195,7 @@ fr:
         export_to_csv: Télécharger en CSV
         delete: Supprimer ce site
         edit: Modifier ce site
+        add: Ajouter un site
         count:
           zero: Aucun site
           one: Un site
