--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -9,6 +9,8 @@ fr:
     actions: Actions
     confirm: "Êtes-vous sûr ? Cette action ne peut pas être annulée."
     cancel: Annuler
+    apply: Appliquer
+    applying: Appliquer…
     add: Ajouter
     send: Envoyer
     save: Enregistrer
@@ -66,6 +68,10 @@ fr:
         prev: Page précédente
         next: Page suivante
         page: "Page %{page}"
+        per_page_label: Nombre de lignes par page
+        per_page:
+          one: Une ligne par page
+          other: "%{count} lignes par page"
       table:
         lines:
           zero: Aucune ligne
