--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -188,7 +188,7 @@ fr:
         url: Adresse du site
         url_hint: Saisissez une url valide, commençant par https:// ou http://
         file: Fichier CSV
-        file_hint: "Format attendu : fichier CSV avec une colonne intitulée URL. Taille maximale : 5Mo."
+        file_hint: "Format attendu : fichier CSV avec une colonne 'URL' (obligatoire), et une colonne 'Nom' (optionnelle). Taille maximale : 5Mo. Les noms de colonnes peuvent être en majuscule ou en minuscule."
         name: "Nom du site"
         name_hint: "Nom utilisé pour l'affichage. S'il est laissé vide, il est récupéré automatiquement lors du prochain audit."
         audits: Toutes les vérifications
