chore: fix locale and notice

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -186,7 +186,6 @@ fr:
 
       session:
         login_failed: Nous n'avons pas réussi à vous identifier.
-        login_success: Vous êtes maintenant connecté.
       site:
         all: Tous les sites
         empty_collection: Il n'y a aucun site à afficher. Ajoutez un ou plusieurs sites à évaluer.
@@ -256,6 +255,8 @@ fr:
   sessions:
     new:
       title: Connexion à Accès Cible
+    omniauth:
+      success: Vous êtes maintenant connecté•e.
   sites:
     index:
       title: Tous les sites
