chore: add translations for user show

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -232,6 +232,10 @@ fr:
           zero: Aucune équipe
           one: Une équipe
           other: "%{count} équipes"
+      user:
+        siret: SIRET
+        team: Équipe
+        email: Adresse mail
 
   errors:
     not_found:
