fix: Adjust "file" translation for site_upload error messages

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -51,6 +51,9 @@ fr:
         invalid: invalide
 
   activemodel:
+    attributes:
+      site_upload:
+        file: Import
     errors:
       models:
         site_upload:
