check: remove the passed/completed alias and just use completed

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -111,7 +111,7 @@ fr:
       check/status:
         pending: Planifié
         running: En cours
-        passed: Effectué
+        completed: Effectué
         blocked: Inapplicable
         failed: Échoué
       checks/accessibility_mention:
