--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -266,6 +266,11 @@ fr:
       title: Plan du site
     display_mode:
       title: Paramètres d’affichage
+      legend: Choisissez un thème pour personnaliser l’apparence du site.
+      dark: Thème sombre
+      light: Thème clair
+      system: Système
+      system_hint: Utilise les paramètres système
   sessions:
     new:
       title: Connexion à Accès Cible
