fix: update audit status translations - Add missing translation for `mixed` status - Update view to render `@audit.status_from_checks`

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -94,11 +94,12 @@ fr:
           one: Une vérification
           other: "%{count} vérifications"
       audit/status:
-        pending: Planifié
-        running: En cours
-        passed: Effectué
-        retryable: À retenter
         failed: Échoué
+        mixed: Mixe
+        passed: Effectué
+        pending: Planifié
+        retryable: À retenter
+        running: En cours
 
       check:
         type: Type de contrôle
