fix: Add aborted state for checks that could not run

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -116,6 +116,7 @@ fr:
         running: En cours
         failed: Échoué
         completed: Effectué
+        aborted: Annulé
       checks/accessibility_mention:
         type: Mention du niveau d'accessibilité
         table_header: Mention
