fix: Abort checks when their requirements fail - accessibility_page_heading & analyze_accessibility_page was not depending on reachable - when reachable was failing, they were not aborted, staying in pending forever - now they depend on reachable and their original requirements

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -99,6 +99,7 @@ fr:
         passed: Effectué
         retryable: À retenter
         failed: Échoué
+        mixed: Mixte
 
       check:
         type: Type de contrôle
