--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -169,6 +169,16 @@ fr:
         link_not_found: Lien non trouvé
         all_passed: Lien trouvé et valide
         invalid_years: Années invalides
+      checks/analyze_plan:
+        type: Plan d'action
+        table_header: Plan d'action
+        year: Année du plan
+        year_not_found: non détectée
+        link_text: Intitulé du lien
+        link_url: Adresse du lien
+        link_not_found: Lien non trouvé
+        all_passed: Lien trouvé et valide
+        invalid_year: Année invalide
       checks/find_accessibility_page:
         type: Déclaration d'accessibilité
         table_header: Déclaration
